--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -83,12 +83,16 @@ body {
   justify-content: center;
   align-items: center;
   margin: 2rem;
+
   input {
     margin: 0 5px;
-    border: 2px solid #000;
+    border: 2px solid #faedf0;
     border-radius: 5px;
     width: 300px;
     height: 30px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    font-weight: 600;
+    padding-left: 10px;
   }
   .v-model-select {
     margin: 0 5px;
@@ -112,4 +116,12 @@ body {
 }
 .title-icon {
   margin-right: 1rem;
+}
+.todoselect {
+  width: 150px;
+  height: 30px;
+  border: 2px solid #faedf0;
+  border-radius: 5px;
+  color: gray;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
